--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,7 @@
                     </div>
                     <div class="geografia__txt">
                         <b class="text-danger">МПР</b> начал свою историю в Омске в октябре 2018 г. Именно в этом
-                        мегаполисе был открыт 1-ый Магазин Постоянных Распродаж.
+                        мегаполисе был открыт 1-ый Магазин Постоянных Распродаж.<br>
                         КАЖДУЮ НЕДЕЛЮ ОТКРЫВАЕТСЯ МИНИМУМ 1 НОВЫЙ МПР
                     </div>
                 </div>
@@ -530,9 +530,9 @@
                         </div>
                         <ul class="investment__list">
                             <li>прорисовка периметра магазина, план расстановки ТО, 3D-моделирование, зонирование
-                                магазина по товарным группам, разработка дизайна вывесок навигации и листовки откртия,
+                                магазина по&nbsp;товарным группам, разработка дизайна вывесок навигации и&nbsp;листовки откртия,
                                 аудио-видео ролики, формирование установочного заказа, сопровождение проекта, очное
-                                обучение управляющего (в теч. 6 мес с даты старта проекта)
+                                обучение управляющего (в&nbsp;теч.&nbsp;6&nbsp;мес с&nbsp;даты старта проекта)
                             </li>
                         </ul>
                     </div>
