--- a/src/index.html
+++ b/src/index.html
@@ -407,7 +407,9 @@
 
     <div id="store-decoration" class="store-decoration">
         <div class="container">
+            <div class="store-decoration__header">
             <div class="store-decoration__title">Оформление магазина</div>
+            </div>
         </div>
         <div class="store-decoration__img">
             <img class="img-fluid d-mobile-none" src="./img/stoe-decoration.png" width="1440" height="720"
