--- a/src/index.html
+++ b/src/index.html
@@ -183,7 +183,7 @@
                     <div>
                         <div class="advantage__item">
                             <div class="advantage__img">
-                                <img src="./img/icons-sprite.svg#icon-bonus" width="31" height="36" alt="">
+                                <img src="./img/icon-bonus.png" width="33" height="38" alt="">
                             </div>
                             <div class="advantage__name">Бонусы партнерам за развитие сети</div>
                             <ul class="advantage__list">
@@ -195,7 +195,7 @@
                         </div>
                         <div class="advantage__item">
                             <div class="advantage__img">
-                                <img src="./img/icons-sprite.svg#icon-escort" width="31" height="36" alt="">
+                                <img src="./img/icon-escort.png" width="37" height="34" alt="">
                             </div>
                             <div class="advantage__name">Сопровождение после открытия</div>
                             <ul class="advantage__list">
@@ -283,8 +283,6 @@
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
