--- a/src/index.html
+++ b/src/index.html
@@ -210,7 +210,7 @@
                         </div>
                         <div class="advantage__item">
                             <div class="advantage__img">
-                                <img src="./img/icons-sprite.svg#icon-umbrella" width="31" height="36" alt="">
+                                <img src="./img/icon-umbrella.png" width="37" height="37" alt="">
                             </div>
                             <div class="advantage__name">Готовое решение по сезонному ассортименту</div>
                             <ul class="advantage__list">
@@ -220,7 +220,7 @@
                         </div>
                         <div class="advantage__item">
                             <div class="advantage__img">
-                                <img src="./img/icons-sprite.svg#icon-brend" width="31" height="36" alt="">
+                                <img src="./img/icon-brend.png" width="28" height="37" alt="">
                             </div>
                             <div class="advantage__name">Брендированный комплект сувенирной продукции в подарок на
                                 открытие магазина
@@ -230,7 +230,7 @@
                     <div>
                         <div class="advantage__item">
                             <div class="advantage__img">
-                                <img src="./img/icons-sprite.svg#icon-computer" width="31" height="36" alt="">
+                                <img src="./img/icon-computer.png" width="37" height="30" alt="">
                             </div>
                             <div class="advantage__name">ИТ-продукт. Специальная конфигурация на базе 1с (розница 2.3)
                             </div>
@@ -243,7 +243,7 @@
                         </div>
                         <div class="advantage__item">
                             <div class="advantage__img">
-                                <img src="./img/icons-sprite.svg#icon-training" width="31" height="36" alt="">
+                                <img src="./img/icon-training.png" width="38" height="37" alt="">
                             </div>
                             <div class="advantage__name">Очное обучение</div>
                             <span>Курсы:</span>
@@ -256,7 +256,7 @@
                         </div>
                         <div class="advantage__item">
                             <div class="advantage__img">
-                                <img src="./img/icons-sprite.svg#icon-cube" width="31" height="36" alt="">
+                                <img src="./img/icon-cube.png" width="34" height="37" alt="">
                             </div>
                             <div class="advantage__name">Интернет магазин
                                 www.mpr-shop.ru
@@ -264,19 +264,19 @@
                         </div>
                         <div class="advantage__item">
                             <div class="advantage__img">
-                                <img src="./img/icons-sprite.svg#icon-delivery" width="44" height="36" alt="">
+                                <img src="./img/icon-delivery.png" width="37" height="30" alt="">
                             </div>
                             <div class="advantage__name">бесплатная доставка</div>
                         </div>
                         <div class="advantage__item">
                             <div class="advantage__img">
-                                <img src="./img/icons-sprite.svg#icon-complaints" width="31" height="36" alt="">
+                                <img src="./img/icon-complaints.png" width="29" height="38" alt="">
                             </div>
                             <div class="advantage__name">Работа с рекламациями</div>
                         </div>
                         <div class="advantage__item">
                             <div class="advantage__img">
-                                <img src="./img/icons-sprite.svg#icon-services" width="31" height="36" alt="">
+                                <img src="./img/icon-services.png" width="37" height="35" alt="">
                             </div>
                             <div class="advantage__name">профессиональные
                                 услуги по открытию магазина
