изменил блок География, вставлена на сайт карта

--- a/src/index.html
+++ b/src/index.html
@@ -132,11 +132,13 @@
             </div>
 
             <div id="geografia" class="geografia">
+                <div class="geografia__header">
                 <div class="geografia__title">География МПР</div>
+                </div>
                 <div class="geografia__body">
                     <div class="geografia__img">
-                        <img class="img-fluid" src="./img/russia-kazakhstan-v2.png" width="841" height="566"
-                             alt="карта mpr Россия и Казахстан">
+                        <!--<img class="img-fluid" src="./img/russia-kazakhstan-v2.png" width="841" height="566" alt="карта mpr Россия и Казахстан">-->
+                        <img class="img-fluid" src="./img/map.png" width="802" height="550" alt="карта mpr Россия и Казахстан">
                     </div>
                     <div class="geografia__txt">
                         <b class="text-danger">МПР</b> начал свою историю в Омске в октябре 2018 г. Именно в этом
