--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
                 </div>
             </div>
 
-            <div class="calculator">
+            <div id="calculator" class="calculator">
                 <div class="calculator__header">
                     <div class="calculator__title">Калькулятор вашего будущего бизнеса</div>
                 </div>
