--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,73 @@
 
     <div id="about" class="about">
         <div class="container">
-            <div id="information" class="general-information">
+            <div class="tabs-format">
+                <div class="tabs-format__header">
+                    <div class="tabs-format__title">Выбери свой формат МПР, там где ты!</div>
+                </div>
+                <div class="tabs-format__body">
+                    <div class="tabs">
+                        <input type="radio" name="tabs" id="tab1" checked="checked">
+                        <label for="tab1">Мини</label>
+                        <div class="tab">
+                            <div class="tabs-format__txt">
+                                <p><b>Общая площадь:</b> 100&ndash;120 кв.м.<br />
+                                    <b>Торговая площадь:</b> 80&ndash;100 кв.м.<br />
+                                    <b>Формат для партнеров с&nbsp;ограниченным бюджетом инвестиций (4&ndash;5&nbsp;млн&nbsp;рублей).</b><br />
+                                        <b>Тип помещения:</b> стрит формат в&nbsp;жилом доме, ТЦ.<br />
+                                    <b>Товарное наполнение магазина состоит из&nbsp;самых высокомаржинальных позиций.</b></p>
+                                <div class="tabs-format__img">
+                                    <img class="img-fluid" src="./img/tabs-mini.png" width="600" height="386" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <input type="radio" name="tabs" id="tab2">
+                        <label for="tab2">Стандарт</label>
+                        <div class="tab">
+                            <div class="tabs-format__txt">
+                                <p><b>Общая площадь:</b> 120&ndash;190 кв.м<br />
+                                    <b>Торговая площадь:</b> 100&ndash;170 кв.м<br />
+                                    <b>Товарное наполнение магазина состоит из&nbsp;самых высокомаржинальных позиций. Формат идеально подходит для небольших городов с&nbsp;населением до&nbsp;50&nbsp;000 человек, районов жилой застройки в&nbsp;крупных городах.</b><br />
+                                        <b>Сумма инвестиций:</b> от&nbsp;4,8 до&nbsp;7,5&nbsp;млн&nbsp;рублей</p>
+                                 <div class="tabs-format__img">
+                                    <img class="img-fluid" src="./img/tabs-standart.png" width="604" height="391" alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <input type="radio" name="tabs" id="tab3">
+                        <label for="tab3">Большой</label>
+                        <div class="tab">
+                            <div class="tabs-format__txt">
+                                <p>Общая площадь: от&nbsp;190 до&nbsp;350 кв.м<br />
+                                    Торговая площадь: 170&ndash;320 кв.м<br />
+                                    Широкий ассортимент всех товарных групп. Магазин данного формата должен быть расположен на&nbsp;первом этаже отдельно стоящего здания, на&nbsp;<nobr>первом-втором</nobr> этажах торгового центра. Формат предполагает возможность ввода в&nbsp;ассортиментную матрицу смежных товаров, не&nbsp;поставляемых франчайзером.<br />
+                                    Сумма инвестиций: от&nbsp;7,5&nbsp;млн&nbsp;рублей</p>
+                                 <div class="tabs-format__img">
+                                    <img class="img-fluid" src="./img/tabs-big.png" width="640" height="398"  alt="">
+                                </div>
+                            </div>
+                        </div>
+
+                        <input type="radio" name="tabs" id="tab4">
+                        <label for="tab4">Shop-n-shop</label>
+                        <div class="tab">
+                            <div class="tabs-format__txt">
+                                <p><b>Успешно развивается как отдельная секция внутри уже работающего продуктового или строительного магазина. Ассортимент на&nbsp;80% состоит из&nbsp;наиболее востребованного товара</b></p>
+                                <p><b>Общая площадь:</b> от&nbsp;180 кв.м<br />
+                                    <b>Торговая площадь:</b> от&nbsp;75 кв.м<br />
+                                    <b>Сумма инвестиций:</b> от&nbsp;2,5&nbsp;млн&nbsp;рублей</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <a href="https://my.matterport.com/show/?m=g2S7uvVg7w7&help=1%27%20frameborder=%270%27%20allowfullscreen%20allow=%27xr-spatial-tracking" target="_blank" class="btn btn-outline-primary tabs-format__tur">смотреть виртуальный тур</a>
+            </div>
+
+
+            <div id="information" class="general-information d-none">
                 <div class="general-information__img">
                     <img class="img-fluid" src="./img/general-information.png" width="568" height="322" alt="">
                 </div>
