--- a/src/index.html
+++ b/src/index.html
@@ -232,14 +232,8 @@
                 </div>
                 <div class="geografia__body">
                     <div class="geografia__img">
-                        <!--<img class="img-fluid" src="./img/russia-kazakhstan-v2.png" width="841" height="566" alt="карта mpr Россия и Казахстан">-->
                         <img class="img-fluid" src="./img/map.png" width="802" height="550"
                              alt="карта mpr Россия и Казахстан">
-                    </div>
-                    <div class="geografia__txt">
-                        <b class="text-danger">МПР</b> начал свою историю в Омске в октябре 2018 г. Именно в этом
-                        мегаполисе был открыт 1-ый Магазин Постоянных Распродаж.<br>
-                        КАЖДУЮ НЕДЕЛЮ ОТКРЫВАЕТСЯ МИНИМУМ 1 НОВЫЙ МПР
                     </div>
                 </div>
             </div>
@@ -512,14 +506,74 @@
     <div id="store-decoration" class="store-decoration">
         <div class="container">
             <div class="store-decoration__header">
-                <div class="store-decoration__title">Оформление магазина</div>
+                <div class="store-decoration__title">Примеры магазинов</div>
             </div>
         </div>
-        <div class="store-decoration__img">
-            <img class="img-fluid d-mobile-none" src="./img/stoe-decoration.png" width="1440" height="720"
-                 alt="Оформление магазина">
-            <img class="img-fluid d-desktop-none" src="./img/stoe-decoration-mobile.png" width="360" height="720"
-                 alt="Оформление магазина">
+        <div class="store-decoration__slider">
+            <div class="swiper one">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="slider-image">
+                            <img src="http://placehold.jp/548x440.png" alt="slide 1">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-image">
+                            <img src="http://placehold.jp/548x440.png" alt="slide 2">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-image">
+                            <img src="http://placehold.jp/548x440.png" alt="slide 3">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-image">
+                            <img src="http://placehold.jp/548x440.png" alt="slide 4">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-image">
+                            <img src="http://placehold.jp/548x440.png" alt="slide 5">
+                        </div>
+                    </div>
+                    <!-- Add Pagination -->
+                </div>
+            </div>
+        </div>
+        <div class="store-decoration__slider">
+            <div class="swiper two">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="slider-image">
+                            <img src="http://placehold.jp/263x213.png" alt="slide 1">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-image">
+                            <img src="http://placehold.jp/263x213.png" alt="slide 2">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-image">
+                            <img src="http://placehold.jp/263x213.png" alt="slide 3">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-image">
+                            <img src="http://placehold.jp/263x213.png" alt="slide 4">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="slider-image">
+                            <img src="http://placehold.jp/263x213.png" alt="slide 5">
+                        </div>
+                    </div>
+                </div>
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
         </div>
     </div>
 
