--- a/src/learning.html
+++ b/src/learning.html
@@ -24,7 +24,57 @@
 <body>
 <div class="wrp">
     @@include('./template/_header.html')
-
+    <div id="learning-main" class="learning-main js-dropdown">
+        <div class="container">
+            <div class="learning-main__header">
+                <div class="learning-main__title">Учебный центр</div>
+                <div class="learning-main__arrow"></div>
+            </div>
+        </div>
+        <div class="dropdown-block">
+            <div class="learning-main__img">
+                <img class="img-fluid" src="./img/learning-main.png" width="1439" height="388" alt="">
+            </div>
+            <div class="container">
+                <div class="learning-main__body">
+                    <div class="learning-main__item">
+                        <div class="learning-main__icon"></div>
+                        <div class="learning-main__name">создан для интеграции опыта действующих технологий и
+                            инструментов
+                            малого бизнеса
+                        </div>
+                    </div>
+                    <div class="learning-main__item">
+                        <div class="learning-main__icon"></div>
+                        <div class="learning-main__name">предоставляет возможность обязательной отработки полученных
+                            навыков
+                            на магазине-школе
+                        </div>
+                    </div>
+                    <div class="learning-main__item">
+                        <div class="learning-main__icon"></div>
+                        <div class="learning-main__name">реализует подготовку к отрытию и сопровождение действующих
+                            магазинов силами региональных тренеров Учебного Центра
+                        </div>
+                    </div>
+                    <div class="learning-main__item">
+                        <div class="learning-main__icon"></div>
+                        <div class="learning-main__name">консультирует после обучния в течение 2 месяцев</div>
+                    </div>
+                    <div class="learning-main__item">
+                        <div class="learning-main__icon"></div>
+                        <div class="learning-main__name">поможет качественно подготовиться к эффективной работе
+                            собственного
+                            МПР
+                        </div>
+                    </div>
+                    <div class="learning-main__item">
+                        <button class="btn btn-primary">Подробнее...</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="learning-page">
         <div class="container">
             <h1 class="learning-page__title">Учебный Центр</h1>
