--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
                         <li>инвестиции от <b>3 980 000 руб</b></li>
                         <li>необходимая площадь под открытие <b>100 - 250 кв.м</b></li>
                         <li>окупаемость от <b>18 месяцев</b></li>
+                        <li>бонусы партнерам за развитие сети до 3 000 000р</li>
                     </ul>
                     <div class="hero__row">
                         <button type="button" class="btn btn-primary" data-remodal-target="consultation">Оставить
@@ -45,6 +46,23 @@
                 <div class="hero__img">
                     <img src="./img/hero2.png" width="386" height="477" alt="">
                 </div>
+            </div>
+        </div>
+        <div class="hero__num">
+            <div class="hero__num-item">
+                <div class="hero__num-top">работает</div>
+                <div class="hero__num-middle">450+</div>
+                <div class="hero__num-top">магазинов</div>
+            </div>
+            <div class="hero__num-item">
+                <div class="hero__num-top">в 2022 выплачено</div>
+                <div class="hero__num-middle">27 млн. руб</div>
+                <div class="hero__num-top">за открытие 5 и 10 МПР</div>
+            </div>
+            <div class="hero__num-item">
+                <div class="hero__num-top">в 2022</div>
+                <div class="hero__num-middle">75+</div>
+                <div class="hero__num-top">новых магазинов</div>
             </div>
         </div>
         <div class="hero__video">
@@ -126,31 +144,23 @@
             <div class="percent__body">
                 <div class="percent__item">
                     <div class="percent__num">1</div>
-                    <div class="percent__name">Спрос на ремонт вырос до +110% с марта 2022 года</div>
-                    <div class="percent__anons">Платежеспособность населения падает. Россияне предпочитают ремонтировать
-                        смартфон, чем покупать новый.
-                    </div>
+                    <div class="percent__name">1 место</div>
+                    <div class="percent__anons">1 место Торговая марка 2021 в номинации: сеть магазинов товаров для дома. Администрация г.Кирова</div>
                 </div>
                 <div class="percent__item">
                     <div class="percent__num">2</div>
-                    <div class="percent__name">Спрос на ремонт вырос до +110% с марта 2022 года</div>
-                    <div class="percent__anons">Платежеспособность населения падает. Россияне предпочитают ремонтировать
-                        смартфон, чем покупать новый.
-                    </div>
+                    <div class="percent__name">3 место</div>
+                    <div class="percent__anons">3 место в категории магазин фиксированных цен и товаров для дома и офиса. По версии Businessmens.ru 2022</div>
                 </div>
                 <div class="percent__item">
                     <div class="percent__num">3</div>
-                    <div class="percent__name">Спрос на ремонт вырос до +110% с марта 2022 года</div>
-                    <div class="percent__anons">Платежеспособность населения падает. Россияне предпочитают ремонтировать
-                        смартфон, чем покупать новый.
-                    </div>
+                    <div class="percent__name">9 место</div>
+                    <div class="percent__anons">Лауреат рейтинга ТОП-500 франшиз по версии  Businessmens.ru 2022</div>
                 </div>
                 <div class="percent__item">
-                    <div class="percent__num">5</div>
-                    <div class="percent__name">Спрос на ремонт вырос до +110% с марта 2022 года</div>
-                    <div class="percent__anons">Платежеспособность населения падает. Россияне предпочитают ремонтировать
-                        смартфон, чем покупать новый.
-                    </div>
+                    <div class="percent__num">4</div>
+                    <div class="percent__name">3 место</div>
+                    <div class="percent__anons">Участник региональных выставок франшиз "Франчайзинг в регионы" 2022</div>
                 </div>
             </div>
         </div>
@@ -238,7 +248,6 @@
     </div>
 
     <div class="tur">
-        <div class="container">
             <div class="tur__body">
                 <img class="img-fluid" src="./img/tur-img.jpg" width="1438" height="628" alt="">
                 <a class="tur__btn btn btn-primary"
@@ -249,7 +258,6 @@
                 <button type="button" class="btn btn-primary" data-remodal-target="consultation">Оставить заявку
                 </button>
             </div>
-        </div>
     </div>
 
     <div id="advantage" class="advantage">
