--- a/src/index.html
+++ b/src/index.html
@@ -266,6 +266,7 @@
                 <div class="advantage__title">Наши преимущества</div>
             </div>
             <div class="advantage__body">
+                <div class="advantage__col">
                 <div class="advantage__item">
                     <div class="advantage__num">
                         1
@@ -277,6 +278,57 @@
                         2
                     </div>
                     <div class="advantage__name">Сопровождение после открытия</div>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__num">
+                        3
+                    </div>
+                    <div class="advantage__name">Готовое решение по сезонному ассортименту</div>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__num">
+                        4
+                    </div>
+                    <div class="advantage__name">Брендированный комплект сувенирной продукции в подарок на открытие магазина</div>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__num">
+                        5
+                    </div>
+                    <div class="advantage__name">ИТ-продукт.<br> Специальная конфигурация на базе 1с (розница 2.3)</div>
+                </div>
+                </div>
+                <div class="advantage__col">
+                <div class="advantage__item">
+                    <div class="advantage__num">
+                        6
+                    </div>
+                    <div class="advantage__name">Очное обучение</div>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__num">
+                        7
+                    </div>
+                    <div class="advantage__name">Интернет магазин www.mpr-shop.ru</div>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__num">
+                        8
+                    </div>
+                    <div class="advantage__name">бесплатная доставка регулярными рейсами</div>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__num">
+                        9
+                    </div>
+                    <div class="advantage__name">профессиональные<br> услуги по открытию магазина</div>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__num">
+                        10
+                    </div>
+                    <div class="advantage__name">Работа с рекламациями</div>
+                </div>
                 </div>
             </div>
         </div>
