--- a/src/index.html
+++ b/src/index.html
@@ -592,13 +592,13 @@
 
     <div class="footer-form">
         <div class="container">
+            <div class="footer-form__body">
             <div class="footer-form__header">
                 <div class="footer-form__title">Оставьте заявку на консультацию
                     по открытию вашего МПР,
                     мы свяжемся с вами в ближайшее время</div>
             </div>
-            <div class="footer-form__body">
-                <form action="">
+                <form class="footer-form__form" action="">
                     <div class="form-group">
                         <input class="form-control" type="text" placeholder="Ваше имя">
                     </div>
@@ -614,12 +614,20 @@
                     <div class="form-group">
                         <input class="btn btn-primary" type="submit" value="оставить заявку">
                     </div>
+                    <div class="footer-form__check">
+                        <input type="checkbox">
+                        <span>
+                       Я принимаю условия «Политики обработки персональных данных»
+и «Пользовательского соглашения» и даю своё согласие обработку
+сведений содержащих мои персональные данные
+в соответствии с Федеральным законом
+«О персональных данных» от 27 июля 2006г. № 152-ФЗ и
+принятых в соответствии с указанным законом нормативных актов
+                            </span>
+                    </div>
                 </form>
             </div>
         </div>
-        Оставьте заявку на консультацию
-        по открытию вашего МПР,
-        мы свяжемся с вами в ближайшее время
     </div>
 </div>
 
