--- a/src/index.html
+++ b/src/index.html
@@ -594,8 +594,8 @@
         <div class="container">
             <div class="footer-form__body">
             <div class="footer-form__header">
-                <div class="footer-form__title">Оставьте заявку на консультацию
-                    по открытию вашего МПР,
+                <div class="footer-form__title">Оставьте заявку на консультацию<br>
+                    по открытию вашего МПР,<br>
                     мы свяжемся с вами в ближайшее время</div>
             </div>
                 <form class="footer-form__form" action="">
