--- a/src/index.html
+++ b/src/index.html
@@ -49,20 +49,24 @@
             </div>
         </div>
         <div class="hero__num">
-            <div class="hero__num-item">
-                <div class="hero__num-top">работает</div>
-                <div class="hero__num-middle">450+</div>
-                <div class="hero__num-top">магазинов</div>
-            </div>
-            <div class="hero__num-item">
-                <div class="hero__num-top">в 2022 выплачено</div>
-                <div class="hero__num-middle">27 млн. руб</div>
-                <div class="hero__num-top">за открытие 5 и 10 МПР</div>
-            </div>
-            <div class="hero__num-item">
-                <div class="hero__num-top">в 2022</div>
-                <div class="hero__num-middle">75+</div>
-                <div class="hero__num-top">новых магазинов</div>
+            <div class="container">
+                <div class="hero__num-body">
+                    <div class="hero__num-item">
+                        <div class="hero__num-top">работает</div>
+                        <div class="hero__num-middle">450+</div>
+                        <div class="hero__num-top">магазинов</div>
+                    </div>
+                    <div class="hero__num-item">
+                        <div class="hero__num-top">в 2022 выплачено</div>
+                        <div class="hero__num-middle">27 млн. руб</div>
+                        <div class="hero__num-top">за открытие 5 и 10 МПР</div>
+                    </div>
+                    <div class="hero__num-item">
+                        <div class="hero__num-top">в 2022</div>
+                        <div class="hero__num-middle">75+</div>
+                        <div class="hero__num-top">новых магазинов</div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="hero__video">
