--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="hero__img">
-                    <img src="./img/hero2.png" width="386" height="477" alt="">
+                    <img class="img-fluid" src="./img/hero2.png" width="386" height="477" alt="">
                 </div>
             </div>
         </div>
@@ -388,7 +388,6 @@
 
         </div>
     </div>
-
 
     <div class="video-shops">
         <div class="container">
