--- a/src/index.html
+++ b/src/index.html
@@ -307,7 +307,9 @@
                     <div class="advantage__num">
                         6
                     </div>
-                    <div class="advantage__name">Очное обучение</div>
+                    <div class="advantage__name">Очное обучение
+                        <a href="" class="advantage__link">учебный центр</a>
+                    </div>
                 </div>
                 <div class="advantage__item">
                     <div class="advantage__num">
